bundle/palm.css
/* ... */
  .js-collapse-me .js-collapse-me-inner {
    height: 0;
    max-height: 0;
    overflow: hidden;
    display: block;
    position: relative;
    transition: max-height 0.5s ease-out; }
  .js-collapse-me.opened .js-collapse-me-inner {
    height: auto;
    max-height: 1000px;
    overflow: auto; }

.mfp-container .mfp-close {
  color: #FFFFFF;
  font-weight: bold;
  opacity: 1; }

.mfp-bg {
  opacity: .9; }

.nodeshop-closed .field--name-body {
  margin-bottom: 4em;
  position: relative; }
  .nodeshop-closed .field--name-body:before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background: -webkit-linear-gradient(top, transparent 0%, transparent 55%, #f2f2f2 100%);
    background: linear-gradient(to bottom, transparent 0%, transparent 55%, #f2f2f2 100%); }

.nodeshop-closed.teaser .heading:after, .nodeshop-closed.homepage-heroimage .heading:after {
  content: "\f023";
  font-family: "FontAwesome";
  display: inline-block;
  color: #808080;
  font-size: 70%; }

.nodeshop-closed.teaser .field--name-body:before, .nodeshop-closed.homepage-heroimage .field--name-body:before {
  background: transparent; }

.profilehead {
  margin-bottom: 50px; }
  .profilehead:after {
    content: "";
    display: table;
    clear: both; }
  .profilehead .image {
    padding: 0;
    text-align: center; }
    @media print, (min-width: 45.001rem) {
      .profilehead .image {
        max-width: 190px;
        float: left;
        margin-right: 50px; } }
    .profilehead .image img {
      border-radius: 100%;
      overflow: hidden;
      margin: 0 auto; }
    .profilehead .image .source {
      display: none !important; }
    .profilehead .image .heading {
      font-size: 18px;
      line-height: 1.4;
      color: #000000;
      margin: 20px 6px 14px 6px; }
  @media screen and (max-width: 45rem) {
    .profilehead .text {
      text-align: center;
      display: table; } }

.progressbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: outside none none;
  padding: 0;
  width: 100%; }
  .progressbar .progressbar__title {
    display: block;
    white-space: nowrap;
    font-weight: 700; }
  .progressbar .progressbar__step {
    flex: 0 1 auto;
    width: 3em; }
  .progressbar .progressbar__icon {
    display: inline-block;
    border: 1px solid transparent;
    background-color: #f2f2f2;
    color: #808080;
    padding: 0.5em;
    border-radius: 2.3em;
    width: 2.3em;
    height: 2.3em; }
  .progressbar .progressbar__linewrapper {
    flex: 1 0 auto;
    text-align: center;
    flex-flow: row nowrap;
    display: flex; }
    .progressbar .progressbar__linewrapper::before {
      flex: 1 0 auto;
      content: "";
      display: block;
      height: 5px;
      width: auto;
      background-color: #f2f2f2;
      margin: 1em 0.2em; }
    .progressbar .progressbar__linewrapper.active .progressbar__icon {
      background-color: #086D9A;
      color: #FFFFFF; }
    .progressbar .progressbar__linewrapper.active::before {
      background-color: #086D9A; }
    .progressbar .progressbar__linewrapper:first-child {
      flex: 0 1 auto; }
      .progressbar .progressbar__linewrapper:first-child::before {
        display: none !important; }

.searchresult {
  margin-bottom: 1.875rem;
  width: 100%;
  overflow: visible;
  position: relative;
  margin-bottom: 3.125rem; }
  .searchresult:after {
    content: "";
    display: table;
    clear: both; }
  .searchresult > *:last-child {
    margin-bottom: 0; }
    .searchresult > *:last-child > *:last-child {
      margin-bottom: 0; }
  .searchresult > h2,
  .searchresult > h3 {
    margin-top: 0;
    margin-bottom: 0.4em;
    word-wrap: break-word;
    overflow-wrap: break-word;
    max-width: 100%;
    margin-bottom: 0.1875rem; }
    .searchresult > h2 a,
    .searchresult > h3 a {
      display: inline; }
  .searchresult p {
    margin-bottom: 0.75rem; }

.shariff {
  margin: 1.25rem 0;
  min-height: 2.75em; }
  @media print {
    .shariff {
      display: none; } }
  .shariff ul.orientation-horizontal {
    display: flex;
    list-style: outside none none;
    padding: 0; }
    .shariff ul.orientation-horizontal li {
      margin-right: 1.8%; }
  @media screen and (max-width: 45rem) {
    .shariff ul.orientation-horizontal li {
      min-width: auto;
      flex-grow: 0; } }

.shariff-init {
  margin: 1.25rem 0;
  min-height: 2.75em; }

.social {
  display: flex;
  align-items: center;
  list-style: none;
  color: #FFFFFF;
  padding: 0;
  margin: 40px 0 20px 0; }
  .social a {
    color: #FFFFFF; }
  .social .ic {
    padding: 0.5em;
    border-radius: 50%;
    width: 2.5em;
    height: 2.5em;
    line-height: 1.5;
    text-align: center;
    margin-right: 0.5em;
    display: inline-block; }
  .social .facebook {
    background: #3B5998; }
  .social .twitter {
    background: #1DA1F2; }
  .social .email {
    background: #E71835; }
  .social .download {
    background: #086D9A; }
  .social .instagram {
    background: #2C2C2C; }

.teaser {
  position: relative; }
  .teaser .heading, .teaser h2, .teaser h3 {
    margin-top: 0;
    margin-bottom: 0.4em;
    word-wrap: break-word;
    overflow-wrap: break-word;
    max-width: 100%;
    font-size: 1.4em; }
    .teaser .heading a, .teaser h2 a, .teaser h3 a {
      display: inline; }
    .teaser .heading a, .teaser h2 a, .teaser h3 a {
      color: #000000; }
    @media screen and (max-width: 45rem) {
      .teaser .heading, .teaser h2, .teaser h3 {
        font-size: 1.2em; } }
  .teaser .source {
    display: none !important; }
  .teaser .image {
    width: 30%;
    float: left;
    margin-right: 1em;
    margin-bottom: 1em;
    height: auto; }
    .teaser .image img {
      width: 100%;
      height: auto; }
/* ... */

